--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        version_retrofit = "2.9.0"
+        version_moshi = "1.12.0"
+        version_timber = "5.0.1"
+        version_coroutine = "1.5.2"
+    }
     repositories {
         google()
         mavenCentral()
