--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         version_moshi = "1.12.0"
         version_timber = "5.0.1"
         version_coroutine = "1.5.2"
+        version_safety_net = "17.0.1"
     }
     repositories {
         google()
