Add Bottom Navigation with Fragment Navigation & Navigation Graph, Add Bottom Navigation Icon, Add Navigation Fragment & Navigation UI Library

--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         version_timber = "5.0.1"
         version_coroutine = "1.5.2"
         version_safety_net = "17.0.1"
+        version_navigation = "2.3.5"
     }
     repositories {
         google()
