--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt' // For Binding Adapters to Work
 }
 
 android {
@@ -28,6 +29,10 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    // Enables data binding
+    buildFeatures {
+        dataBinding true
     }
 }
 
@@ -61,4 +66,14 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "androidx.navigation:navigation-ui-ktx:$version_navigation"
+
+    // ViewModel
+    //implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$version_view_model"
+
+    // Fragment & Activity
+    //implementation "androidx.fragment:fragment-ktx:$version_fragment"
+    implementation "androidx.activity:activity-ktx:$version_activity"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$version_glide"
 }
