--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         version_coroutine = "1.5.2"
         version_safety_net = "17.0.1"
         version_navigation = "2.3.5"
+        version_view_model = "2.3.1"
+        version_fragment = "1.3.6"
+        version_activity = "1.3.1"
+        version_glide = "4.12.0"
     }
     repositories {
         google()
