Add Cookie Database Layer, Stores Cookies in DB so that they are persisted during app restart

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,9 @@ dependencies {
     // Google Flexbox
     // Uncomment to use Flex wrap needed at explore fragment sort filter
     //implementation "com.google.android.flexbox:flexbox:$version_flexbox"
+
+    // Room (Database)
+    implementation "androidx.room:room-runtime:$version_room"
+    implementation "androidx.room:room-ktx:$version_room"
+    kapt "androidx.room:room-compiler:$version_room"
 }
