--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         version_activity = "1.3.1"
         version_glide = "4.12.0"
         version_flexbox = "3.0.0"
+        version_room = "2.3.0"
     }
     repositories {
         google()
