Add Restaurant Details Fragment, Navigate to Restaurant Details Fragment upon clicking Restaurant List & Booking List & Restaurant Card, Add Support of Navigation Up Button at App/Action Bar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt' // For Binding Adapters to Work
+    id 'androidx.navigation.safeargs' // Safe-Args
 }
 
 android {
