--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
 
+        // Safe-Args Plugin
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
