--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
         version_glide = "4.12.0"
         version_flexbox = "3.0.0"
         version_room = "2.3.0"
+        version_maps = "18.0.2"
     }
     repositories {
         google()
