Add OAuth2 Login Button For Facebook & Google (Redirect to Backend OAuth2 Authorization URL) to Account Fragment(Login Portion), Add Intent Filter with path /redirectToAndroid to mainActivity whose purpose is to facilitate redirection upon OAuth2Login, Parse Cookie passed to MainActivity as Query Parameters in IntentData URI

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.felixstanley.makanmoerahandroid"
         minSdk 22
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
@@ -89,4 +89,8 @@ dependencies {
 
     // Google Maps
     implementation "com.google.android.gms:play-services-maps:$version_maps"
+
+    // Android X Browser (For Custom Tabs Support)
+    // https://developer.chrome.com/docs/android/custom-tabs/integration-guide/
+    implementation "androidx.browser:browser:$version_androidx_browser"
 }
